--- a/.gitmodules
+++ b/.gitmodules
@@ -2,4 +2,4 @@
 	path = stimuli
 	url = git@github.com:courtois-neuromod/retino.stimuli.git
 	datalad-id = 52140b46-63c8-45a7-a03f-2f2cab0db23f
-	datalad-url = git@github.com:courtois-neuromod/retino.stimuli.git
+	datalad-url = https://github.com/courtois-neuromod/retino.stimuli.git
